--- a/src/style/tpl/homelist_tpl.less
+++ b/src/style/tpl/homelist_tpl.less
@@ -271,6 +271,26 @@
       .borderradius(5,5,5,5);
     }
   }
+  .columnList{
+    width: 100%;
+    text-align: center;
+    box-sizing: border-box;
+    img{
+      .w(32);
+      .pt(17);
+    }
+    h3{
+      color: #12d5b5;
+      .fs(14);
+      .pt(10);
+      .pb(10);
+    }
+    p{
+      color: #9c9c9c;
+      .fs(12);
+      .pb(10);
+    }
+  }
   .list{
     .listtitle{
       .fs(20);
