--- a/src/style/tpl/tabbar_tpl.less
+++ b/src/style/tpl/tabbar_tpl.less
@@ -7,7 +7,7 @@
   display: inline-block;
   height: 100%;
   width: 55%;
-  background-color: #f2f2f2;
+  background-color: #e7eaee;
   left: -55%;
   .top(0);
   position: fixed;
@@ -15,7 +15,7 @@
   border-right: solid #e0e0e0;
   .borderwidth(1);
   box-sizing: border-box;
-  box-shadow: -2px -0px 8px #d2d2d2 inset;
+  box-shadow: -4px 0px 15px #b5b5b5 inset;
   ul{
     width: 85%;
     list-style: none;
