--- a/src/view/tpl/login_tpl.html
+++ b/src/view/tpl/login_tpl.html
@@ -3,7 +3,7 @@
 </div>
 <h1>一刻</h1>
 <div class="login-input">
-    <form action="">
+    <form >
         <div>
             <input type="text" placeholder="豆瓣账号 (邮箱/手机号)" ng-model="uservalue" ng-focus="userblur = true" ng-blur="blur('user')">
             <span ng-click="uservalue = ''" ng-show="uservalue && userblur">X</span>
