--- a/src/view/tpl/tabbar_tpl.html
+++ b/src/view/tpl/tabbar_tpl.html
@@ -16,7 +16,7 @@
             <img src="images/04.png" alt="">
             <span ng-class="{cur:title == '热门作者'}">热门作者</span>
         </li>
-        <li ng-click="click('栏目浏览')">
+        <li ng-click="click('栏目浏览')" ui-sref="app.column">
             <img src="images/05.png" alt="">
             <span ng-class="{cur:title == '栏目浏览'}">栏目浏览</span>
         </li>
