--- a/src/style/tpl/login_tpl.less
+++ b/src/style/tpl/login_tpl.less
@@ -111,6 +111,9 @@ login{
       color: #fff;
       background-color: rgba(26, 177, 158, 0.85);
     }
+    .login-submit:active{
+      background-color: rgba(22, 127, 112, 0.85);
+    }
     a{
       display: block;
       width: 100%;
