--- a/src/view/tpl/homelist_tpl.html
+++ b/src/view/tpl/homelist_tpl.html
@@ -15,6 +15,12 @@
             <p ng-bind="authormsg.resume"></p>
             <a ng-href="{{authormsg.url}}">去豆瓣主页</a>
         </div>
+        <!--栏目浏览时的标题栏-->
+        <div class="columnList" ng-if="columnDetailId">
+            <img ng-src="{{columnDetailId.icon}}" >
+            <h3 ng-bind="columnDetailId.name"></h3>
+            <p ng-bind="columnDetailId.description"></p>
+        </div>
         <!--循环遍历的列表项-->
         <div class="list"
              ng-repeat="(key,list) in homelist"
@@ -29,7 +35,7 @@
                  ng-bind="list.likeNum" ></div>
 
             <span class="smallTitle"
-                  ng-if="list.column.name"
+                  ng-if="list.column.name && !noSmallTitle"
                   ng-bind="list.column.name">
             </span>
             <p  ng-bind="list.title" class="listtitle" ></p>
@@ -66,7 +72,7 @@
     </div>
 
     <!--今日一刻页面显示的跳转按钮-->
-    <div ng-if="(!authormsg && helpLoading)"
+    <div ng-if="(!authormsg && helpLoading && !noSmallTitle)"
          class="go-past"
          ng-click="goPast()"
          ng-show="!isLoading">
