修复了一些小问题

--- a/src/view/tpl/authorlist_tpl.html
+++ b/src/view/tpl/authorlist_tpl.html
@@ -1,5 +1,5 @@
 
-<div class="author-list">
+<div class="author-list helpTarget">
     <div class="author-list-top">
         <h2>热门作者</h2>
     </div>
