--- a/src/view/tpl/columns_tpl.html
+++ b/src/view/tpl/columns_tpl.html
@@ -1,4 +1,4 @@
-<div id="columns">
+<div id="columns" class="helpTarget">
     <ul>
         <li class="columnList"
             ng-repeat="(key,column) in columns"
