--- a/src/view/tpl/authorlist_tpl.html
+++ b/src/view/tpl/authorlist_tpl.html
@@ -1,5 +1,9 @@
 
 <div class="author-list helpTarget">
+    <div class="home-loading" ng-show="isLoading" >
+        <div class="double-bounce1"></div>
+        <div class="double-bounce2"></div>
+    </div>
     <div class="author-list-top">
         <h2>热门作者</h2>
     </div>
