--- a/src/view/tpl/columns_tpl.html
+++ b/src/view/tpl/columns_tpl.html
@@ -1,4 +1,8 @@
 <div id="columns" class="helpTarget">
+    <div class="home-loading" ng-show="isLoading" >
+        <div class="double-bounce1"></div>
+        <div class="double-bounce2"></div>
+    </div>
     <ul>
         <li class="columnList"
             ng-repeat="(key,column) in columns"
