--- a/src/view/tpl/login_tpl.html
+++ b/src/view/tpl/login_tpl.html
@@ -1,17 +1,17 @@
 <div class="login-close">
-    <span ng-touchstart="loginIn = !loginIn">X</span>
+    <span ng-click="loginIn = !loginIn">X</span>
 </div>
 <h1>一刻</h1>
 <div class="login-input">
     <form >
         <div>
             <input type="text" placeholder="豆瓣账号 (邮箱/手机号)" ng-model="uservalue" ng-focus="userblur = true" ng-blur="blur('user')">
-            <span ng-touchstart="uservalue = ''" ng-show="uservalue && userblur">X</span>
+            <span ng-click="uservalue = ''" ng-show="uservalue && userblur">X</span>
             <img src="images/user.png" alt="">
         </div>
         <div>
             <input type="password" placeholder="密码" ng-model="passwordvalue" ng-focus="passwordblur = true" ng-blur="blur('password')">
-            <span ng-touchstart="passwordvalue = ''" ng-show="passwordvalue && passwordblur">X</span>
+            <span ng-click="passwordvalue = ''" ng-show="passwordvalue && passwordblur">X</span>
             <img src="images/password.png" alt="">
 
         </div>
