--- a/src/view/tpl/nav_tpl.html
+++ b/src/view/tpl/nav_tpl.html
@@ -1,20 +1,20 @@
 <div class="nav" >
     <!--第一个图片为导航图标,第二个为返回图标-->
-    <a ng-touchstart="nav()">
+    <a ng-click="nav()">
         <img src="images/navlist.png">
     </a>
-    <a ng-touchstart="goBack(event)">
+    <a ng-click="goBack()">
         <img src="images/goback.png">
     </a>
     <span ng-bind="title"></span>
     <a >
         <img src="images/whiteheart.png"
              ng-show="!isInLike"
-             ng-touchstart="saveLike()">
+             ng-click="saveLike()">
 
         <img src="images/redheart.png"
              ng-show="isInLike"
-             ng-touchstart="deleteLike()">
+             ng-click="deleteLike()">
         <span ng-bind="detailObj.like_count"></span>
     </a>
 </div>
